<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_PowerControlledHeaterDefaultParameters" Id="{f3fea633-d937-444b-b707-4db1932c4ac3}">
    <Declaration><![CDATA[TYPE ST_PowerControlledHeaterDefaultParameters :
STRUCT
	aSetPointLimitsPower : ARRAY[1..2] OF REAL := [0, 8000];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>